fix translation of index.html

--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -192,7 +192,7 @@
 
                     <div id="controls" class="no-select">
                         <div id="controls-content" class="d-flex align-items-center">
-                            <button type="button" class="mx-2 btn btn-lg btn-secondary" id="step" data-toggle="tooltip" title="单步走过配方">
+                            <button type="button" class="mx-2 btn btn-lg btn-secondary" id="step" data-toggle="tooltip" title="单步执行配方">
                                 单步
                             </button>
 
@@ -418,7 +418,7 @@
                         <div class="form-group">
                             <label for="save-name" class="bmd-label-floating">配方名</label>
                             <input type="text" class="form-control" id="save-name">
-                            <span class="bmd-help">把你的菜谱以这个名字保存到本地，或者拷贝它以供加载</span>
+                            <span class="bmd-help">把你的配方以这个名字保存到本地，或者拷贝它以供加载</span>
                         </div>
                     </div>
                     <div class="modal-footer" id="save-footer">
@@ -430,7 +430,7 @@
                             <h6 style="display: inline">数据链接</h6>
                             <div class="save-link-options">
                                 <label class="checkbox-inline">
-                                    <input type="checkbox" id="save-link-recipe-checkbox" checked> 包含菜谱
+                                    <input type="checkbox" id="save-link-recipe-checkbox" checked> 包含配方
                                 </label>
                                 <label class="checkbox-inline">
                                     <input type="checkbox" id="save-link-input-checkbox" checked> 包含输入
@@ -452,14 +452,14 @@
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label for="load-name" class="bmd-label-floating">菜谱名</label>
+                            <label for="load-name" class="bmd-label-floating">配方名</label>
                             <select class="form-control" id="load-name"></select>
-                            <span class="bmd-help">在下拉菜单选择菜谱名以载入你的菜谱</span>
+                            <span class="bmd-help">在下拉菜单选择配方名以载入你的配方</span>
                         </div>
                         <div class="form-group">
                             <label for="load-text" class="bmd-label-floating">Recipe</label>
                             <textarea class="form-control" id="load-text" rows="5"></textarea>
-                            <span class="bmd-help">把菜谱传进这个方框以载入你的菜谱</span>
+                            <span class="bmd-help">把配方传进这个方框以载入你的配方</span>
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -525,7 +525,7 @@
                         <div class="checkbox option-item">
                             <label for="updateUrl">
                                 <input type="checkbox" option="updateUrl" id="updateUrl" checked>
-                                输入或菜谱变化时更新 URL
+                                输入或配方变化时更新 URL
                             </label>
                         </div>
 
